--- a/index.html
+++ b/index.html
@@ -2,211 +2,211 @@
 <meta http-equiv="content-type" content="text/html; charset=windows-1252"></head><body><a>Kashmir_Ki_Kahani</a> <br>
 <br>
 <a>PART1</a> <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/1.jpg">
+<img src="images/1.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/2.jpg">
+<img src="images/2.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/3_002.jpg">
+<img src="images/3_002.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/41.jpg">
+<img src="images/41.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/51.jpg">
+<img src="images/51.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/6.jpg">
+<img src="images/6.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/7a.jpg">
+<img src="images/7a.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/8a.jpg">
+<img src="images/8a.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/9a.jpg">
+<img src="images/9a.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/10a.jpg">
+<img src="images/10a.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/11a.jpg">
+<img src="images/11a.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/12a.jpg">
+<img src="images/12a.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/13a.jpg">
+<img src="images/13a.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/14a.jpg">
+<img src="images/14a.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/15a.jpg">
+<img src="images/15a.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/16a.jpg">
+<img src="images/16a.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/17a.jpg">
+<img src="images/17a.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/18a.jpg">
+<img src="images/18a.jpg">
 <br>
 <br>
 <a>PART2</a><br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/110.gif">
+<img src="images/110.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/210.gif">
+<img src="images/210.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/310.gif">
+<img src="images/310.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/45.gif">
+<img src="images/45.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/51.gif">
+<img src="images/51.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/61.gif">
+<img src="images/61.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/71.gif">
+<img src="images/71.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/81.gif">
+<img src="images/81.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/91.gif">
+<img src="images/91.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/101.gif">
+<img src="images/101.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/111.gif">
+<img src="images/111.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/121.gif">
+<img src="images/121.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/131.gif">
+<img src="images/131.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/141.gif">
+<img src="images/141.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/151.gif">
+<img src="images/151.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/161.gif">
+<img src="images/161.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/171.gif">
+<img src="images/171.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/181.gif">
+<img src="images/181.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/191.gif">
+<img src="images/191.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/201.gif">
+<img src="images/201.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/211.gif">
+<img src="images/211.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/221.gif">
+<img src="images/221.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/231.gif">
+<img src="images/231.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/241.gif">
+<img src="images/241.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/251.gif">
+<img src="images/251.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/261.gif">
+<img src="images/261.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/271.gif">
+<img src="images/271.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/281.gif">
+<img src="images/281.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/291.gif">
+<img src="images/291.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/301.gif">
+<img src="images/301.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/311.gif">
+<img src="images/311.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/321.gif">
+<img src="images/321.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/331.gif">
+<img src="images/331.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/341.gif">
+<img src="images/341.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/351.gif">
+<img src="images/351.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/361.gif">
+<img src="images/361.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/371.gif">
+<img src="images/371.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/381.gif">
+<img src="images/381.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/391.gif">
+<img src="images/391.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/401.gif">
+<img src="images/401.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/411.gif">
+<img src="images/411.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/421.gif">
+<img src="images/421.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/431.gif">
+<img src="images/431.gif">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/441.gif">
+<img src="images/441.gif">
 <br>
 <br>
 <a>PART3</a><br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/1_003.jpg">
+<img src="images/1_003.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/2_002.jpg">
+<img src="images/2_002.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/3.jpg">
+<img src="images/3.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/4_002.jpg">
+<img src="images/4_002.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/5.jpg">
+<img src="images/5.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/6_003.jpg">
+<img src="images/6_003.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/7_002.jpg">
+<img src="images/7_002.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/8_002.jpg">
+<img src="images/8_002.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/9.jpg">
+<img src="images/9.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/10_002.jpg">
+<img src="images/10_002.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/11_002.jpg">
+<img src="images/11_002.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/12.jpg">
+<img src="images/12.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/13.jpg">
+<img src="images/13.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/14_002.jpg">
+<img src="images/14_002.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/15.jpg">
+<img src="images/15.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/16_002.jpg">
+<img src="images/16_002.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/17.jpg">
+<img src="images/17.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/18_002.jpg">
+<img src="images/18_002.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/19.jpg">
+<img src="images/19.jpg">
 <br>
 <br>
 <a>PART4</a><br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/1_002.jpg">
+<img src="images/1_002.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/2_003.jpg">
+<img src="images/2_003.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/3_003.jpg">
+<img src="images/3_003.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/4.jpg">
+<img src="images/4.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/5_002.jpg">
+<img src="images/5_002.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/6_002.jpg">
+<img src="images/6_002.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/7.jpg">
+<img src="images/7.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/8.jpg">
+<img src="images/8.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/9_002.jpg">
+<img src="images/9_002.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/10.jpg">
+<img src="images/10.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/11.jpg">
+<img src="images/11.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/12_002.jpg">
+<img src="images/12_002.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/13_002.jpg">
+<img src="images/13_002.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/14.jpg">
+<img src="images/14.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/15_002.jpg">
+<img src="images/15_002.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/16.jpg">
+<img src="images/16.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/17_002.jpg">
+<img src="images/17_002.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/18.jpg">
+<img src="images/18.jpg">
 <br>
-<img src="https://dl.dropboxusercontent.com/u/2137983/K_K_Comics_files/19_002.jpg">
+<img src="images/19_002.jpg">
 <br>
 
 </body></html>
